--- a/index.html
+++ b/index.html
@@ -2,84 +2,78 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Master RG Empire</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <title>إمبراطورية الماستر RG</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         :root { --neon: #00f2ff; --bg: #000; }
         * { box-sizing: border-box; }
-        html, body { height: 100%; margin: 0; padding: 0; background: #000; color: #fff; font-family: sans-serif; overflow: hidden; }
         
-        /* الهيدر */
+        /* حل مشكلة الطول في الموبايل */
+        html, body { 
+            height: 100%; width: 100%; margin: 0; padding: 0; 
+            background: #000; color: #fff; font-family: sans-serif; 
+            overflow: hidden; position: fixed; /* يمنع اهتزاز الشاشة */
+        }
+
         header { 
-            height: 55px; background: #111; border-bottom: 2px solid var(--neon);
+            height: 50px; background: #111; border-bottom: 2px solid var(--neon);
             display: flex; justify-content: space-between; align-items: center; padding: 0 10px;
-            position: fixed; top: 0; width: 100%; z-index: 1000;
+            position: absolute; top: 0; width: 100%; z-index: 1000;
         }
 
         /* حاوية الشات */
         #chat-container { 
-            position: absolute; top: 55px; bottom: 70px; /* ترك مساحة للهيدر والخانة */
-            width: 100%; overflow-y: auto; padding: 15px;
-            display: flex; flex-direction: column; gap: 10px;
+            position: absolute; top: 50px; left: 0; right: 0;
+            /* سنحدد الـ bottom برمجياً بالأسفل */
+            overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px;
         }
 
-        /* خانة الكتابة - الحل القوي */
+        /* خانة الكتابة - جعلناها ترتفع أكثر */
         .input-footer { 
             position: fixed; bottom: 0; left: 0; right: 0; 
-            height: 70px; background: #111; border-top: 1px solid #222;
-            display: flex; align-items: center; padding: 0 10px; gap: 10px; z-index: 9999;
+            height: 65px; background: #1a1a1a; border-top: 2px solid var(--neon);
+            display: flex; align-items: center; padding: 0 10px; gap: 8px; z-index: 9999;
         }
 
         input { 
-            flex: 1; background: #000; color: #fff; border: 1px solid #333; 
-            height: 45px; padding: 0 15px; border-radius: 25px; font-size: 16px; outline: none;
+            flex: 1; background: #000; color: #fff; border: 1px solid #444; 
+            height: 45px; padding: 0 15px; border-radius: 10px; font-size: 16px; outline: none;
         }
 
-        #sendBtn { background: var(--neon); border: none; height: 45px; padding: 0 20px; border-radius: 25px; font-weight: bold; cursor: pointer; }
+        #sendBtn { background: var(--neon); border: none; height: 45px; padding: 0 15px; border-radius: 10px; font-weight: bold; cursor: pointer; color: #000; }
 
-        /* الستارات بالموبايل */
-        .side-bar { 
-            position: fixed; top: 55px; bottom: 70px; width: 250px; 
-            background: #0a0a0a; z-index: 5000; transition: 0.3s; padding: 15px; border: 1px solid #222;
-        }
-        #right-side { right: -260px; }
-        #right-side.active { right: 0; }
-        #left-side { left: -260px; }
-        #left-side.active { left: 0; }
-
-        .btn-m { background: var(--neon); border: none; padding: 5px 10px; border-radius: 4px; font-weight: bold; font-size: 12px; }
-
-        /* ستايل الرسالة */
-        .msg { background: #151515; padding: 10px; border-radius: 10px; border-right: 3px solid var(--neon); }
+        .msg { background: #111; padding: 8px; border-radius: 8px; border-right: 3px solid var(--neon); word-wrap: break-word; }
+        
+        /* الستارات للموبايل */
+        .sidebar { position: fixed; top: 50px; bottom: 65px; width: 200px; background: #050505; z-index: 5000; transition: 0.3s; padding: 10px; border: 1px solid #222; display: none; }
+        .sidebar.active { display: block; }
+        #right-s { right: 0; }
+        #left-s { left: 0; }
+        .btn-m { background: #222; color: var(--neon); border: 1px solid var(--neon); padding: 5px 10px; border-radius: 5px; font-size: 12px; }
     </style>
 </head>
 <body>
 
 <header>
     <button class="btn-m" onclick="toggle('right')">المتصلين</button>
-    <span style="color:var(--neon); font-weight:bold;">MASTER RG</span>
+    <b style="color:var(--neon)">MASTER RG</b>
     <button class="btn-m" onclick="toggle('left')">الملف</button>
 </header>
 
 <div id="chat-container"></div>
 
-<div id="right-side" class="side-bar">
-    <h3 style="color:var(--neon)">المتواجدون</h3>
+<div id="right-s" class="sidebar">
     <div style="color:gold">👑 الماستر RG</div>
 </div>
 
-<div id="left-side" class="side-bar">
-    <div style="text-align:center;">
-        <img src="https://via.placeholder.com/60" id="userImg" style="width:60px; border-radius:50%; border:2px solid var(--neon);">
-        <h4 id="userName">الماستر RG</h4>
-        <button class="btn-m" onclick="location.reload()">تحديث</button>
-    </div>
+<div id="left-s" class="sidebar">
+    <button class="btn-m" onclick="location.reload()" style="width:100%">تحديث الشات</button>
 </div>
 
-<div class="input-footer">
-    <input type="text" id="msgInp" placeholder="اكتب رسالتك هنا..." autocomplete="off">
+<div class="input-footer" id="footer">
+    <input type="text" id="msgInp" placeholder="اكتب هنا..." autocomplete="off">
     <button id="sendBtn" onclick="send()">إرسال</button>
 </div>
 
@@ -88,36 +82,45 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
+    // --- كود تصحيح الارتفاع للموبايل ---
+    function fixHeight() {
+        const vh = window.innerHeight;
+        const footerHeight = document.getElementById('footer').offsetHeight;
+        document.getElementById('chat-container').style.bottom = footerHeight + 'px';
+    }
+    window.addEventListener('resize', fixHeight);
+    window.addEventListener('load', fixHeight);
+    fixHeight();
+
     function toggle(id) {
-        const el = document.getElementById(id + '-side');
-        const isActive = el.classList.contains('active');
-        document.getElementById('right-side').classList.remove('active');
-        document.getElementById('left-side').classList.remove('active');
-        if (!isActive) el.classList.add('active');
+        const el = document.getElementById(id + '-s');
+        const isVisible = el.style.display === 'block';
+        document.getElementById('right-s').style.display = 'none';
+        document.getElementById('left-s').style.display = 'none';
+        if (!isVisible) el.style.display = 'block';
     }
 
     function send() {
         const t = document.getElementById('msgInp').value;
-        const n = localStorage.getItem('rg-n') || "الماستر_RG";
         if(t.trim()) {
-            db.ref('messages').push({ u: n, t: t });
+            db.ref('messages').push({ u: localStorage.getItem('rg-n') || "الماستر", t: t });
             document.getElementById('msgInp').value = '';
+            // سكرول لآخر رسالة عند الإرسال
+            setTimeout(() => {
+                const c = document.getElementById('chat-container');
+                c.scrollTop = c.scrollHeight;
+            }, 200);
         }
     }
 
-    db.ref('messages').on('child_added', (snap) => {
+    db.ref('messages').limitToLast(20).on('child_added', (snap) => {
         const m = snap.val();
         const div = document.createElement('div');
         div.className = 'msg';
-        div.innerHTML = `<b style="color:var(--neon)">${m.u}:</b> <span>${m.t}</span>`;
-        const container = document.getElementById('chat-container');
-        container.appendChild(div);
-        container.scrollTop = container.scrollHeight;
-    });
-
-    // حل مشكلة الكيبورد في الموبايل
-    window.addEventListener('resize', () => {
-        document.getElementById('chat-container').scrollTop = document.getElementById('chat-container').scrollHeight;
+        div.innerHTML = `<b style="color:var(--neon)">${m.u}:</b> ${m.t}`;
+        const c = document.getElementById('chat-container');
+        c.appendChild(div);
+        c.scrollTop = c.scrollHeight;
     });
 </script>
 
