--- a/index.html
+++ b/index.html
@@ -1,146 +1,20 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Master RG - Animated Styles</title>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-    <style>
-        :root { --neon: #00f2ff; --bg: #000; }
-        * { box-sizing: border-box; }
-        
-        /* الأنماط المتحركة */
-        .style-rainbow { animation: rainbow 3s infinite linear; font-weight: bold; }
-        @keyframes rainbow { 0% {color: red;} 20% {color: yellow;} 40% {color: green;} 60% {color: cyan;} 80% {color: blue;} 100% {color: magenta;} }
-
-        .style-gold { background: linear-gradient(90deg, #ffd700, #fff, #ffd700); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-size: 200% auto; animation: shine 2s linear infinite; font-weight: bold; }
-        @keyframes shine { to { background-position: 200% center; } }
-
-        .style-fire { animation: fire 1s infinite alternate; font-weight: bold; text-shadow: 0 0 5px #ff4500, 0 0 10px #ff4500; color: #ffcc00; }
-        @keyframes fire { from { opacity: 0.8; } to { opacity: 1; text-shadow: 0 0 20px #ff4500; } }
-
-        .style-neon { animation: neon-glow 1.5s ease-in-out infinite alternate; color: #fff; text-shadow: 0 0 7px #00f2ff, 0 0 10px #00f2ff, 0 0 21px #00f2ff; }
-        @keyframes neon-glow { from { text-shadow: 0 0 5px #00f2ff; } to { text-shadow: 0 0 20px #00f2ff, 0 0 30px #00f2ff; } }
-
-        html, body { height: 100%; margin: 0; background: #000; color: #fff; font-family: sans-serif; overflow: hidden; position: fixed; width: 100%; }
-        header { height: 55px; background: #111; border-bottom: 2px solid var(--neon); display: flex; justify-content: space-between; align-items: center; padding: 0 10px; z-index: 1000; }
-        
-        #chat-container { position: absolute; top: 55px; left: 0; right: 0; bottom: 75px; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
-        .sidebar { position: fixed; top: 55px; bottom: 75px; width: 260px; background: #0a0a0a; z-index: 5000; transition: 0.3s; padding: 15px; border: 1px solid #222; display: none; overflow-y: auto; }
-        .box { background: #151515; border: 1px solid #333; padding: 12px; border-radius: 12px; margin-bottom: 10px; }
-
-        /* ستايل الرسايل */
-        .msg-box { display: flex; gap: 10px; margin-bottom: 5px; }
-        .msg-img { width: 40px; height: 40px; border-radius: 50%; border: 1px solid var(--neon); object-fit: cover; }
-        .msg-content { padding: 8px 12px; border-radius: 12px; flex: 1; border: 1px solid #222; }
-
-        .input-footer { position: fixed; bottom: 0; left: 0; right: 0; height: 75px; background: #111; border-top: 2px solid var(--neon); display: flex; align-items: center; padding: 0 10px; gap: 8px; z-index: 9999; }
-        input[type="text"] { flex: 1; height: 45px; border-radius: 25px; padding: 0 15px; background: #000; color: #fff; border: 1px solid #333; outline: none; }
-    </style>
-</head>
-<body>
-
-<header>
-    <button onclick="toggle('right')" style="background:none; border:1px solid var(--neon); color:var(--neon); padding:5px 10px; border-radius:5px;">المتصلين</button>
-    <b style="color:var(--neon)">MASTER RG</b>
-    <button onclick="toggle('left')" style="background:none; border:1px solid var(--neon); color:var(--neon); padding:5px 10px; border-radius:5px;">الألوان & الملف</button>
-</header>
-
-<div id="chat-container"></div>
-
-<div id="right-s" class="sidebar" style="right:0;">
-    <h3 style="color:var(--neon)">المتواجدون</h3>
-    <div>👑 الماستر RG</div>
-</div>
-
-<div id="left-s" class="sidebar" style="left:0;">
-    <div class="box">
-        <h4>الملف الشخصي</h4>
-        <input type="text" id="newName" placeholder="الاسم...">
-        <input type="file" id="fileInp" accept="image/*" onchange="loadImg(this)" style="margin-top:10px; font-size:10px;">
+<div class="box">
+    <h4 style="color:var(--neon); margin-top:0;">تخصيص الألوان</h4>
+    <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:10px;">
+        <span>لون الاسم:</span>
+        <input type="color" id="cName" value="#00f2ff">
     </div>
-
-    <div class="box">
-        <h4>تخصيص الألوان</h4>
-        <div style="margin-bottom:10px;">
-            <span>اللون الثابت:</span>
-            <input type="color" id="cName" value="#00f2ff">
-        </div>
-        <div>
-            <span>النمط المتحرك:</span>
-            <select id="animStyle" style="width:100%; background:#000; color:#fff; border:1px solid #444; padding:5px; border-radius:5px;">
-                <option value="">بدون حركة</option>
-                <option value="style-rainbow">🌈 قوس قزح</option>
-                <option value="style-gold">✨ ذهبي يلمع</option>
-                <option value="style-fire">🔥 لهب متحرك</option>
-                <option value="style-neon">⚡ نيون متوهج</option>
-            </select>
-        </div>
+    <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:10px;">
+        <span>لون الرسالة:</span>
+        <input type="color" id="cBubble" value="#1a1a1a">
     </div>
-
-    <button onclick="saveAll()" style="width:100%; background:var(--neon); border:none; padding:10px; font-weight:bold; border-radius:5px;">حفظ وتطبيق</button>
+    <div style="margin-top:10px;">
+        <span style="display:block; margin-bottom:5px;">النمط المتحرك 🌈:</span>
+        <select id="cAnim" style="width:100%; background:#000; color:#fff; border:1px solid #444; padding:8px; border-radius:5px; cursor:pointer;">
+            <option value="">بدون حركة (عادي)</option>
+            <option value="anim-rainbow">🌈 قوس قزح</option>
+            <option value="anim-gold">✨ ذهبي ملكي</option>
+            <option value="anim-fire">🔥 لهب متحرك</option>
+        </select>
+    </div>
 </div>
-
-<div class="input-footer">
-    <input type="text" id="msgInp" placeholder="اكتب هنا...">
-    <button onclick="send()" style="background:var(--neon); border:none; padding:10px 20px; border-radius:25px; font-weight:bold;">إرسال</button>
-</div>
-
-<script>
-    const config = { databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com" };
-    firebase.initializeApp(config);
-    const db = firebase.database();
-
-    let myData = {
-        n: localStorage.getItem('rg-n') || "الماستر",
-        i: localStorage.getItem('rg-i') || "https://via.placeholder.com/60",
-        c: localStorage.getItem('rg-c') || "#00f2ff",
-        s: localStorage.getItem('rg-s') || ""
-    };
-
-    function loadImg(input) { if (input.files && input.files[0]) { const r = new FileReader(); r.onload = (e) => { myData.i = e.target.result; }; r.readAsDataURL(input.files[0]); } }
-
-    function saveAll() {
-        myData.n = document.getElementById('newName').value || myData.n;
-        myData.c = document.getElementById('cName').value;
-        myData.s = document.getElementById('animStyle').value;
-        localStorage.setItem('rg-n', myData.n);
-        localStorage.setItem('rg-i', myData.i);
-        localStorage.setItem('rg-c', myData.c);
-        localStorage.setItem('rg-s', myData.s);
-        alert("تم تحديث ستايل الإمبراطورية!");
-    }
-
-    function toggle(id) {
-        const el = document.getElementById(id + '-s');
-        const active = el.style.display === 'block';
-        document.querySelectorAll('.sidebar').forEach(s => s.style.display = 'none');
-        if (!active) el.style.display = 'block';
-    }
-
-    function send() {
-        const t = document.getElementById('msgInp').value;
-        if(t.trim()) {
-            db.ref('messages').push({ u: myData.n, t: t, i: myData.i, c: myData.c, s: myData.s });
-            document.getElementById('msgInp').value = '';
-        }
-    }
-
-    db.ref('messages').limitToLast(20).on('child_added', (snap) => {
-        const m = snap.val();
-        const div = document.createElement('div');
-        div.className = 'msg-box';
-        div.innerHTML = `
-            <img src="${m.i}" class="msg-img">
-            <div class="msg-content">
-                <span class="${m.s}" style="${m.s ? '' : 'color:'+m.c}">${m.u}</span>
-                <div style="margin-top:4px;">${m.t}</div>
-            </div>
-        `;
-        document.getElementById('chat-container').appendChild(div);
-        document.getElementById('chat-container').scrollTop = document.getElementById('chat-container').scrollHeight;
-    });
-</script>
-</body>
-</html>
